--- a/index.html
+++ b/index.html
@@ -3,43 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charan Babu Rakindi - Personal Website</title>
+    <title>Charan Babu Rakindi's Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Charan Babu Rakindi</h1>
-        <p>Engineering Student | Tech Enthusiast</p>
-    </header>
-    
-    <nav>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
 
+    <!-- Header with Navigation -->
+    <header>
+        <nav>
+            <div class="logo">Charan's Portfolio</div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#linkedin">LinkedIn</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
     <section id="about">
-        <h2>About Me</h2>
-        <p>Hi! I'm <strong>Charan Babu Rakindi</strong>, an engineering student passionate about technology and innovation. I love exploring new tech and working on projects that make life easier.</p>
+        <h1>About Me</h1>
+        <p>Hello! I'm Charan Babu Rakindi, an engineering student passionate about technology. I recently created an app called "We Charge" that allows sellers to offer temporary Wi-Fi access to customers.</p>
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>We Charge</h3>
-            <p>An app designed to provide temporary Wi-Fi passwords to users from enrolled sellers, with access until the prepaid time expires. My goal was to make connectivity more accessible and convenient.</p>
-        </div>
+        <h1>Projects</h1>
+        <p>Check out my latest project: <strong>We Charge</strong> – an app providing temporary Wi-Fi passwords to customers, developed to help users connect conveniently.</p>
     </section>
 
     <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Feel free to reach out via LinkedIn!</p>
-        <p><a href="https://linkedin.com/in/charanrakindi" target="_blank">LinkedIn: charanrakindi</a></p>
+        <h1>Contact Me</h1>
+        <p>Email: charan@example.com</p>
     </section>
 
+    <section id="linkedin">
+        <h1>LinkedIn</h1>
+        <p>Connect with me on <a href="https://linkedin.com/in/charanrakindi" target="_blank">LinkedIn</a>.</p>
+    </section>
+
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Charan Babu Rakindi</p>
+        <p>&copy; 2024 Charan Babu Rakindi. All Rights Reserved.</p>
     </footer>
 
 </body>
