--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section id="contact">
         <h1>Contact Me</h1>
-        <p>Email: charan@example.com</p>
+        <p>Email: charanrakindi@gmail.com</p>
     </section>
 
     <section id="linkedin">
