--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Charan Babu Rakindi. All Rights Reserved.</p>
+        <p>&copy; 2024 Charan Babu Rakindi.</p>
     </footer>
 
 </body>
