--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section id="contact">
         <h1>Contact Me</h1>
-        <p>Email: <a href="charanrakindi@gmail.com">charanrakindi@gmail.com</a>a></p>
+        <p>Email: <a href="charanrakindi@gmail.com">charanrakindi@gmail.com</a></p>
     </section>
 
     <section id="linkedin">
