--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charan Babu Rakindi's Portfolio</title>
+    <title>Charan Rakindi's Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <!-- Header with Navigation -->
     <header>
         <nav>
-            <div class="logo">Charan's Portfolio</div>
+            <div class="logo">Charan Rakindi</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
