--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </section>
 
     <section id="contact">
-        <h1>Contact Me</h1>
-        <p>Email: <a href="charanrakindi@gmail.com">charanrakindi@gmail.com</a></p>
-    </section>
+    <h1>Contact Me</h1>
+    <p>Email: <a href="mailto:charanrakindi@gmail.com">charanrakindi@gmail.com</a></p>
+</section>
 
     <section id="linkedin">
         <h1>LinkedIn</h1>
