--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="projects">
         <h1>Projects</h1>
-        <p>Check out my latest project: <strong>We Charge</strong> – an app providing temporary Wi-Fi passwords to customers, developed to help users connect conveniently.</p>
+        <p>Check out my latest project: <strong>WI Charge</strong> – an app providing temporary Wi-Fi passwords to customers, developed to help users connect conveniently.</p>
     </section>
 
     <section id="contact">
