--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Main Content -->
     <section id="about">
         <h1>About Me</h1>
-        <p>Hello! I'm Charan Babu Rakindi, an engineering student passionate about technology. I recently created an app called "WI Charge" that allows sellers to offer temporary Wi-Fi access to customers.</p>
+        <p>Hello! I'm Charan, an engineering student passionate about technology. I recently created an app called "WI Charge" that allows sellers to offer temporary Wi-Fi access to customers.</p>
     </section>
 
     <section id="projects">
